完成引用服务

--- a/documents/概念.md
+++ b/documents/概念.md
@@ -2,7 +2,7 @@
 
 ## 项目(Project)
 
-  需要投入大量人力物力才能完成的事务
+  需要投入大量人力物力才能完成的事务集合，产出为一个影片或者游戏系统
   至少包含1个景
   至少包含1个集
   至少相关1个库
@@ -35,9 +35,9 @@
   可按使用场景分类
   可以在多个库中出现
   可以在多个库分类下出现
+  数据具有单一性，不能引用其他资产
 
   至少有1规格
-  至少有1个预制件
 
 ## 组合件(Assembly)
 
@@ -45,14 +45,17 @@
   可能有多种规格
 
 
+## 规格(Specs)
+  
+  资产的不同规格指数据组成不同
+  不同规格之间整体上相似,但是组件不同
+  如果对资产数据做量的增/减的操作，不涉及组件的变更，那么不能认为是一个规格，比如对模型的完善或者优化，不当作新的规格处理
+  如果对数据添加了完全不同的组件，比如3条腿的板凳变为4条腿的板凳，应该当作不同规格处理，
+  每个规格至少有1个预制件
+
 ## 预制件(Prefab)
 
   只是属性的调整
-  不修改底层数据
-
-
-## 规格(Specs)
-  
-  资产的不同规格底层数据不同
-  不同规格之间整体上相似
+  不修改底层数据组件, 比如只对板凳的腿做了粗细的变更，不应当作为一个规格处理，每个blendshape变形，应该作为一个预制件处理
+  每个预制件只与1个规格对应
   
