引用，规格，预制件

--- a/documents/概念.md
+++ b/documents/概念.md
@@ -3,9 +3,9 @@
 ## 项目(Project)
 
   需要投入大量人力物力才能完成的事务集合，产出为一个影片或者游戏系统
-  至少包含1个景
-  至少包含1个集
-  至少相关1个库
+  包含景
+  包含集
+  关联库
 
 ## 集(Epic)
 
@@ -51,7 +51,9 @@
   不同规格之间整体上相似,但是组件不同
   如果对资产数据做量的增/减的操作，不涉及组件的变更，那么不能认为是一个规格，比如对模型的完善或者优化，不当作新的规格处理
   如果对数据添加了完全不同的组件，比如3条腿的板凳变为4条腿的板凳，应该当作不同规格处理，
+
   每个规格至少有1个预制件
+  每个规格总有1个基础(basic)预制件
 
 ## 预制件(Prefab)
 
@@ -59,3 +61,9 @@
   不修改底层数据组件, 比如只对板凳的腿做了粗细的变更，不应当作为一个规格处理，每个blendshape变形，应该作为一个预制件处理
   每个预制件只与1个规格对应
   
+## 引用(Reference)
+  
+  只是对已有数据的使用, 数据的取得需要通过
+  有一个引用主体（subject）
+  有一个引用对象（source）
+    引用对象是具体的，需要指定其来源（source）规格（specs）和预制件（prefab）
