整理asset_collection,asset服务

--- a/documents/概念.md
+++ b/documents/概念.md
@@ -7,9 +7,9 @@
   包含集
   关联库
 
-## 集(Epic)
+## 集(Epic, Level)
 
-  故事阶段篇
+  故事篇
   至少有1个章节
 
 ## 章节(Sequence)
@@ -22,15 +22,23 @@
   包含灯光设置
   包含氛围渲染
 
-## 库(Library)
+## 镜头（cut）
 
-  收集资产
+  至少有1个观察摄像机
+  至少引用有1个布景
+  一般要引用多个资产
+  一般要引用多个组合件
+
+  至少有1个规格
+
+## 资产集(Asset Collection)
+
   库下有分类
 
 ## 资产(Asset)
 
   可以直接使用的资源物件
-  存在于某个库下
+  至少属于1个资产集
   可按通用度分类
   可按使用场景分类
   可以在多个库中出现
@@ -42,13 +50,14 @@
 ## 组合件(Assembly)
 
   引用多个已有资产组合而成
-  可能有多种规格
+  至少有1规格
+  至少属于1个资产集
 
-
-## 规格(Specs)
+## 规格(Specs， Variables)
   
-  资产的不同规格指数据组成不同
-  不同规格之间整体上相似,但是组件不同
+  一般上用于描述资产、布景、角色、镜头等最终数据承载实体的不同装配上
+  不同规格指构成组件不同，但整体上不影响最终成品概念
+  不同规格之间整体上相似,但是组件必然不同
   如果对资产数据做量的增/减的操作，不涉及组件的变更，那么不能认为是一个规格，比如对模型的完善或者优化，不当作新的规格处理
   如果对数据添加了完全不同的组件，比如3条腿的板凳变为4条腿的板凳，应该当作不同规格处理，
 
