--- a/documents/概念.md
+++ b/documents/概念.md
@@ -22,6 +22,8 @@
   包含灯光设置
   包含氛围渲染
 
+  至少有1个规格
+
 ## 镜头（cut）
 
   至少有1个观察摄像机
@@ -33,7 +35,11 @@
 
 ## 资产集(Asset Collection)
 
-  库下有分类
+  即资产库，资产分组管理形式
+  资产集不含数据
+  一个资产在多个资产集中
+  
+  有1个默认的资产集
 
 ## 资产(Asset)
 
@@ -52,6 +58,8 @@
   引用多个已有资产组合而成
   至少有1规格
   至少属于1个资产集
+
+  至少有1个规格
 
 ## 规格(Specs， Variables)
   
@@ -72,7 +80,10 @@
   
 ## 引用(Reference)
   
-  只是对已有数据的使用, 数据的取得需要通过
+  只是对已有数据的使用
   有一个引用主体（subject）
   有一个引用对象（source）
     引用对象是具体的，需要指定其来源（source）规格（specs）和预制件（prefab）
+    引用按需设置参数（params）
+  
+  在不同的场景中，引用可能需要不同的处理
